# DSL-Task

./: .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  build-executable.sh  build-tests.sh  run.sh
include/: defines.hpp
include/pi/: pi-controller.hpp  pi-transformer.hpp
include/pi/generator/: pi-c-generator.hpp  pi-code-generator.hpp
include/pi/node/: pi_node.hpp  start_node.hpp
include/pi/node/portable_node/: end_node.hpp  mul_node.hpp  portable_node.hpp  sum_node.hpp  unit_delay_node.hpp
include/pi/parser/: pi-parser.hpp  xml2pi-parser.hpp
src/: log.cpp  main.cpp
src/pi/: pi-controller.cpp  pi-transformer.cpp
src/pi/generator/: pi-c-generator.cpp
src/pi/node/: pi_node.cpp  start_node.cpp
src/pi/node/portable_node/: end_node.cpp  mul_node.cpp  portable_node.cpp  sum_node.cpp  unit_delay_node.cpp
src/pi/parser/: xml2pi-parser.cpp
static/test/: system1.c  system10.xml  system11.xml  system2.c  system2.xml  system3.c  system3.xml  system4.c  system4.xml  system5.xml  system6.xml  system7.xml  system8.xml  system9.c  system9.xml
test/: test.cpp
